  * fix improper display of error messages. Patch thanks to Serguey Basalaev
    (LP: #580032)
  * profiles/ufw-mailserver: remove Postfix reference
  * fix typo in warning (LP: #637876)
  * fix manpage reference to /etc/default/ufw (Closes: 601111)
  * mention quoting of application profile names with spaces (LP: #715676)
  * fix man-page hyphenation in ufw.8

 -- Jamie Strandboge <jamie@ubuntu.com>  Sun, 29 Aug 2010 20:38:19 -0500

ufw (0.30) RELEASED; urgency=low

  * add example Upstart script
  * error out when filesystem is read-only (LP: #430053)
  * catch exception if can't find parent pid when refreshing application
    profiles (LP: #424528)
  * update manpage to clarify 'show' command (LP: #453083)
  * update setup.py to use sys.executable and cleanup required binaries
  * update test suite
    - better handle iptables < 1.4 (tested with 1.3.8)
    - allow alternate interpreter
  * write loglevel rules to user rules (LP: #459925)
  * properly log INVALID packets for medium and higher (LP: #480789)
  * Makefile: clean up POTFILES target
  * generate binary translations in setup.py rather than shipping them in
    source (LP: #490366)
  * src/ufw-init-functions: don't run 'already started' check unless
    ENABLED. This should improve boot speed such that iptables is not
    needlessly called which results in an unneeded modprobe.
  * manpage fixes thanks to Loic Minier
  * set "default" sysctl values before "all" values. Thanks to Loic Minier
  * clean up parser to make it easier to add new functionality
  * don't log LIMIT rules if logging is off (LP: #512131)
  * fix for noisy services getting logged. Added new 'skip-to-policy' chains
    that are now used in after*.rules (LP: #488032)
  * add rsyslog example configuration and update README
  * add reset command (LP: #436608)
  * add --force option to enable (LP: #496267)
  * decode("utf-8") some strings in 'status' to correct formatting errors with
    with multibyte characters
  * add more reports